--- a/index.html
+++ b/index.html
@@ -1132,7 +1132,7 @@ document.getElementById('backToTop')?.addEventListener('click', function(e) {
       },
       vix: {
         nombre:'ViX+', categoria:'Entretenimiento', color:'#00a651',
-         logo: 'https://static.wikia.nocookie.net/logopedia/images/0/07/Vix%2B.png/revision/latest/scale-to-width-down/300?cb=20230119232122', // <-- NUEVA LÍNEA: URL del logo
+         logo: 'https://images.ctfassets.net/6n252fx9hkkr/7vKqy8Vkx0LbDivk8oMdZ5/282346cd83d1324afe571e0c7d946d6d/logo_Vixpremium.webp', // <-- NUEVA LÍNEA: URL del logo
         cover:'https://png.pngtree.com/thumb_back/fh260/background/20230611/pngtree-courtyard-of-an-old-building-image_2918263.jpg',
         hero:'https://discovery-content-gt.tigocloud.net/uploads/gt_destacado_vix_novelas_200224_20a967fcc4.webp',
         personaje:'https://i.imgur.com/reY6l7T.png',
@@ -1424,3 +1424,4 @@ document.getElementById('backToTop')?.addEventListener('click', function(e) {
 </script>
 </body>
 </html>
+
