--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@ document.getElementById('backToTop')?.addEventListener('click', function(e) {
         logo: 'https://upload.wikimedia.org/wikipedia/commons/7/77/Disney_Plus_logo.svg', // <-- NUEVA LÍNEA: URL del logo
         cover:'https://wallpapercat.com/w/full/6/6/1/119145-1280x2120-mobile-hd-avengers-wallpaper-image.jpg',
         hero:'https://media.a24.com/p/a9a0529e8d586f53676ea457a8fc9775/adjuntos/296/imagenes/009/415/0009415680/1200x675/smart/disney-plus-contenidos-disneyjpg.jpg',
-        personaje:'https://static.wikia.nocookie.net/disney/images/f/fa/Captain-America-AOU-Render.png/revision/latest/thumbnail/width/360/height/360?cb=20180420015558&path-prefix=es',
+        personaje:'https://freepngimg.com/thumb/captain_america/7-2-captain-america-png-hd-thumb.png',
         descripcion:'Películas, Series, Canales ESPN.',
         planes:[
           {titulo:'Premium – Cuenta completa', precio:14, detalle:'', agotado:false},
@@ -1424,5 +1424,6 @@ document.getElementById('backToTop')?.addEventListener('click', function(e) {
 </script>
 </body>
 </html>
+
 
 
