--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@ document.getElementById('backToTop')?.addEventListener('click', function(e) {
       disney: {
         nombre:'Disney+', categoria:'Entretenimiento', color:'#113ccf',
         logo: 'https://upload.wikimedia.org/wikipedia/commons/7/77/Disney_Plus_logo.svg', // <-- NUEVA LÍNEA: URL del logo
-        cover:'https://wallpapercat.com/w/full/6/6/1/119145-1280x2120-mobile-hd-avengers-wallpaper-image.jpg',
+        cover:'https://i.pinimg.com/564x/89/7c/dc/897cdc5feac4f18a0d09054b55afcd74.jpg',
         hero:'https://media.a24.com/p/a9a0529e8d586f53676ea457a8fc9775/adjuntos/296/imagenes/009/415/0009415680/1200x675/smart/disney-plus-contenidos-disneyjpg.jpg',
         personaje:'https://freepngimg.com/thumb/captain_america/7-2-captain-america-png-hd-thumb.png',
         descripcion:'Películas, Series, Canales ESPN.',
@@ -1409,6 +1409,7 @@ document.getElementById('backToTop')?.addEventListener('click', function(e) {
 </script>
 </body>
 </html>
+
 
 
 
